Fix craftsmanship watch animation scroll jumping by using CSS sticky instead of GSAP pin

--- a/style.css
+++ b/style.css
@@ -756,7 +756,7 @@ button {
 }
 
 .dismantle-container {
-  position: absolute;
+  position: sticky;
   top: 0;
   left: 0;
   width: 100%;
@@ -797,6 +797,7 @@ button {
   position: relative;
   z-index: 20;
   width: 100%;
+  margin-top: -100vh;
   padding-top: 100vh;
   padding-bottom: 50vh;
 }
